--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "dom element helpers",
 	"main": "index.js",
 	"scripts": {
-		"test": "ava"
+		"test": "ava",
+		"release": "ava && npm publish"
 	},
 	"repository": {
 		"type": "git",
